--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:LJdm815C2N/CdyorPtCjlV/MyQhc8NkP5O2FNBu6BjI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
